--- a/CSS/style.css
+++ b/CSS/style.css
@@ -187,7 +187,6 @@ nav a:hover::after {
   margin-bottom: 40px;
 }
 
-/* ROW layout */
 .card-container {
   display: flex;
   gap: 30px;
@@ -202,14 +201,13 @@ nav a:hover::after {
   overflow: hidden;
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
   text-align: center;
-  background: #fff;
+  background: white;
 }
 
 .card img {
   width: 100%;
   height: 200px;
   object-fit: cover;
-  display: block;
 }
 
 .card p {
@@ -239,7 +237,6 @@ nav a:hover::after {
   margin-bottom: 40px;
 }
 
-/* Flex Container */
 .package-container {
   display: flex;
   gap: 30px;
@@ -247,7 +244,6 @@ nav a:hover::after {
   flex-wrap: wrap;
 }
 
-/* Card */
 .package-card {
   width: 300px;
 }
@@ -335,7 +331,10 @@ nav a:hover {
 }
 
 /* Button Hover Effects */
-button {
+
+.btn-book {
+  display: inline-block;
+  text-decoration: none;
   padding: 10px 25px;
   margin-bottom: 20px;
   border: none;
@@ -344,11 +343,9 @@ button {
   border-radius: 10px;
   transition: all 0.3s ease;
   font-size: 16px;
-  /* cursor: pointer; */
-  transition: all 0.3s ease;
 }
 
-button:hover {
+.btn-book:hover {
   background: #0288d1;
   color: black;
   transform: translateY(-4px);
@@ -362,6 +359,117 @@ button:hover {
   text-align: center;
   padding: 15px;
   margin-top: 50px;
+}
+
+/* next page login page */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Georgia, "Times New Roman", Times, serif;
+}
+
+.container1 {
+  width: 50%;
+  height: 30%;
+  padding: 30px;
+  border-radius: 10px;
+  border: 3px solid olivedrab;
+  border-radius: 10px;
+  margin: auto;
+  background: rgba(255, 255, 255, 0.5);
+  box-shadow: 0 8px 20px rgba(0, 0, 0.3);
+  margin-top: 50px;
+  margin-bottom: 100px;
+  background-image: url(/img/nature1.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+h1 {
+  text-align: center;
+  margin-bottom: 10px;
+}
+.input {
+  margin-bottom: 15px;
+}
+label {
+  font-size: large;
+  display: block;
+  font-weight: bolder;
+  margin-bottom: 5px;
+}
+input,
+select,
+textarea {
+  width: 100%;
+  padding: 8px;
+  border: 2px solid olivedrab;
+  border-radius: 7px;
+}
+.back-link {
+  color: white;
+  text-decoration: none;
+  transition: 0.3s;
+}
+button {
+  width: 100%;
+  padding: 10px;
+  background-color: #dc4c04;
+  color: white;
+  box-shadow: 0 10px 20px rgb(0, 0, 4);
+  border-radius: 10px;
+  transition: all 0.3s ease;
+  font-size: 16px;
+}
+button:hover {
+  background-color: #0288d1;
+  transform: translateY(-4px);
+  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.4);
+}
+/* Alter button */
+/* Popup overlay */
+.popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6);
+  display: none;
+  justify-content: center;
+  align-items: center;
+  z-index: 999;
+}
+
+/* Show popup */
+.popup:target {
+  display: flex;
+}
+
+/* Popup box */
+.popup-content {
+  background: #fff;
+  padding: 30px;
+  border-radius: 10px;
+  text-align: center;
+  width: 90%;
+  max-width: 400px;
+}
+
+.popup-content h2 {
+  color: green;
+}
+
+/* Close button */
+.close-btn {
+  display: inline-block;
+  margin-top: 15px;
+  padding: 10px 25px;
+  background: green;
+  color: white;
+  text-decoration: none;
+  border-radius: 5px;
 }
 
 /* Responsive */
